--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Template</title>
+    <title>Weather App</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container mx-auto">
+      <form class="js-search-form" action="#">
+        <input type="text" name="city" autocomplete="off" />
+        <button class="" type="submit">Search</button>
+      </form>
+    </div>
+  </body>
 </html>
