--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,5 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App</title>
   </head>
-  <body>
-    <div class="container mx-auto">
-      <form class="js-search-form" action="#">
-        <input type="text" name="city" autocomplete="off" />
-        <button class="" type="submit">Search</button>
-      </form>
-    </div>
-  </body>
+  <body></body>
 </html>
